--- a/views/products/edit.pug
+++ b/views/products/edit.pug
@@ -6,8 +6,8 @@ block content
             label(for="name")  Name
             input#name(type="text", class="form-control", name="name",value=products.name required)
         .form-group
-            label(for="price") Gender
-            input#price(type="text", class="form-control", name="price",value=products.gender required) 
+            label(for="gender") Gender
+            input#gender(type="text", class="form-control", name="gender",value=products.gender required) 
         .form-group
             label(for="email") Email
             input#email(type="text", class="form-control", name="email", pattern=".+@.+.com",  value=products.email required)
